feat: JWT role claim 권한 체크 연결